--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<body>
 		<script>
 		var id=0;
-		var squares = [ {"idx": "START", "x": 0, "y": 0} ];
+		var squares = [ {"idx": "START", "x": 0, "y": 0, "left": null, "right": null } ];
+		var currentSquare = squares[0];
 		var leftFoot;
 		var rightFoot;
 		function parseFoot(foot)
@@ -21,12 +22,44 @@
 			return v;
 		}
 
-		function step(name, square, left, right, notes)
+		/* Example
+		 * 
+		 * step({ name: "Opening the form", face: "N", left:"SW:N", right:"SW:N", desc: "Wu Chi"});
+		 * step({ right: "SE:N", desc: "Tai Chi" });
+         * step({ name: "Grasp the sparrows tail" );
+		 * step("", "0", "SW:N", "SE:NE", "Hanging 1");
+		 * step("", "0", "SW:N", "SE:NE", "Hanging 2");
+		 * /
+
+		function step(obj)
+		{
+			if (obj.move != "OPEN")
+			{
+				var ns = moveSquare(squares.length, currentSquare);
+				ns.left = moveFoot(currentSquare.left, obj.move);
+				ns.right = moveFoot(currentSquare.right, obj.move);
+				squares.push(ns);
+				currentSquare = ns;
+			}
+			if (obj.name != null)
+				$("#contents").append("<div  style='clear: both;'><h3>"+obj.name+"</h3></div>");
+
+			if (obj.left != null) currentSquare.left=getFoot(obj.left);
+			if (obj.right != null) currentSquare.right=getFoot(obj.right);
+
+			var desc = (obj.desc==null) ? "&nbsp;" : obj.desc;
+			$("#contents").append("<div id='"+id+"' style='float: left;'><div class='svg'></div><div>"+desc+"</div></div>");
+
+			$("#"+id+" div.svg").svg({onLoad: function(svg) { drawIntro(id, svg); } });
+			id++;
+
+		}
+
+		function stepXX(name, square, left, right, notes)
 		{
 
 			leftFoot = parseFoot(left);
 			rightFoot = parseFoot(right);
-			var s = squares[squares.length-1];
 			if (square != "0") {
 				var ns = {"idx": "Sqr:"+squares.length, "x": s.x, "y": s.y };
 				switch(square) {
@@ -36,7 +69,7 @@
 				   case "W": ns.x += -1; break;
 				}
 				squares.push(ns);
-				s = ns;
+				currentSquare = ns;
 			}
 			if (name != "")
 				$("#contents").append("<div  style='clear: both;'><h3>"+name+"</h3></div>");
@@ -154,7 +187,9 @@
 			$("#"+id+" div.svg svg").css({"height": (max.y-min.y)*sqSize+2*offset, "width": (max.x-min.x)*sqSize+2*offset});
 		}
 		$( document ).ready(function() {
+			/*
 			step("Opening the form", "0", "SW:N", "SW:N", "Wu Chi");
+			
 			step("", "0", "SW:N", "SE:N", "Tai Chi");
 
 			step("Grasp the sparrows tail", "0", "SW:N", "SE:N", "Tai Chi");
@@ -180,7 +215,7 @@
 			step("", "0", "SW:W", "NE:NW", "Single whip");
 
 			step("Support the Sky", "0", "SW:NW", "NE:N", "");
-			/* ... */
+			// .......
 			step("White Crane", "0", "SW:W:T", "NE:N", "");
 			step("", "0", "SW:W", "NE:N", "Reach back");
 
@@ -196,16 +231,16 @@
 			step("", "0", "SW:W", "NE:NW", "Step Back");
 
 			step("Punch", "0", "SW:W", "NE:NW", "Rollback");
-			/*...*/
+			// .......
 			step("", "W", "SE:SW", "NW:W", "Step");
-			/*... */
+			// .......
 			step("", "W", "SW:S", "NE:NW", "Punch");
 			step("", "0", "SW:S", "NE:NW", "Separate Obliquely");
 			step("", "0", "SW:S", "NE:NW", "Push");
 
 			step("", "W", "SW:N", "NE:NW", "Snake");
 			step("", "W", "SW:N", "SE:N", "Tai Chi");
-
+			*/
 
 		});
 			</script>
